# ChangeLog for dev-util/gnustep-base
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/gnustep-base/Attic/ChangeLog,v 1.15 2003/07/13 20:58:34 raker Exp $

*gnustep-base-1.7.1 (13 Jul 2003)

  13 Jul 2003; Nick Hadaway <raker@gentoo.org> gnustep-base-1.7.1.ebuild:
  Added the latest unstable build.

*gnustep-base-1.6.0-r1 (02 Jul 2003)

  02 Jul 2003; raker@gentoo.org <raker@gentoo.org> gnustep-base-1.6.0-r1.ebuild:
  Now depends on the gnustep eclass.

  26 Jun 2003; raker@gentoo.org <raker@gentoo.org> gnustep-base-1.6.0.ebuild:
  marked stable for x86

*gnustep-base-1.6.0 (31 Mar 2003)

  31 Mar 2003; Alastair Tse <liquidx@gentoo.org> gnustep-base-1.6.0.ebuild,
  files/gnustep:
  version bump. thanks to Michael R. Taylor <mtaylor@member.fsf.org>. Bug #18280.

*gnustep-base-1.5.1 (19 Jan 2003)

  19 Jan 2003; Nick Hadaway <raker@gentoo.org> gnustep-base-1.5.1.ebuild,
  files/digest-gnustep-base-1.5.1 :
  New "unstable" version.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*gnustep-base-1.4.0 (03 Sep 2002)

  03 Sep 2002; Nick Hadaway <raker@gentoo.org> gnustep-base-1.4.0.ebuild,
  files/digest-gnustep-base-1.4.0 :
  Version bump.

*gnustep-base-1.3.4-r1 (19 Jul 2002)

  19 Jul 2002; Nick Hadaway <raker@gentoo.org>
  gnustep-base-1.3.4-r1.ebuild, files/digest-gnustep-base-1.3.4-r1 :
  Figured out install variables.  No longer doing manual file install.
  Fixed some typos in the ChangeLog.

*gnustep-base-1.3.4 (05 Jul 2002)

  05 Jul 2002; Nick Hadaway <raker@gentoo.org> gnustep-base-1.3.4.ebuild:
  Updated to the 1.3.4 package.  libxml2 now appears to be detected.
  Currently fails compiling, so masked in package.mask

*gnustep-base-1.3.3 (04 Jul 2002)

  04 Jul 2002; Nick Hadaway <raker@gentoo.org> gnustep-base-1.3.3.ebuild:
  Updated to the 1.3.3 package.  libxml2 is currently not detected correctly.

*gnustep-base-1.1.0 (04 Jul 2002)
